--- a/_posts/2018-09-01-hello2018.md
+++ b/_posts/2018-09-01-hello2018.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "Hello 2018"
 subtitle:   "Hello World, Hello Blog"
 date:       2018-09-01 17:00:00
-author:     "Hux"
+author:     "programfiles"
 header-img: "img/avatar-hux-ny.jpg"
 tags:
     - World!
