--- a/_posts/2018-09-24-RMQ.md
+++ b/_posts/2018-09-24-RMQ.md
@@ -8,3 +8,136 @@ header-img: "img/in-post/rmq.jpg"
 tags:
     - 数据结构
 ---
+* 参考自kuangbin模板
+* [CNBLOGS 殇雪](https://www.cnblogs.com/zyf0163/p/4782133.html)
+
+### 一维RMQ问题模板
+
+```cpp
+//求最大值，数组下标从 1 开始。
+
+//求最小值，或者最大最小值下标，或者数组从 0 开始对应修改即可。
+
+const int MAXN = 50010;
+int dp[MAXN][20];
+int mm[MAXN];
+
+//初始化 RMQ, b 数组下标从 1 开始，从 0 开始简单修改
+
+void initRMQ(int n,int b[])
+{
+    mm[0] = -1;
+    for(int i = 1; i <= n; i++)
+    {
+        mm[i] = ((i&(i-1)) == 0)?mm[i-1]+1:mm[i-1];
+        dp[i][0] = b[i];
+    }
+    for(int j = 1; j <= mm[n]; j++)
+        for(int i = 1; i + (1<<j) -1 <= n; i++)
+            dp[i][j] = max(dp[i][j-1],dp[i+(1<<(j-1))][j-1]);
+}
+
+//查询最大值
+
+int rmq(int x,int y)
+{
+    int k = mm[y-x+1];
+    return max(dp[x][k],dp[y-(1<<k)+1][k]);
+}
+
+```
+
+**RMQ（Range Minimum/Maximum Query）**，即区间最值查询，是指这样一个问题：对于长度为n的数列a，回答若干询问RMQ（A,i,j）(i, j<=n)，返数列a中下标在i，j之间的最小/大值。如果只有一次询问，那样只有一遍for就可以搞定，但是如果有许多次询问就无法在很快的时间处理出来。在这介绍一个 **在线算法**。所谓在线算法，是指用户每输入一个查询便马上处理一个查询。该算法一般用较长的时间做预处理，待信息充足以后便可以用较少时间回答每个查询。 **ST（Sparse Table）算法**是一个非常有名的在线处理RMQ问题的算法，**它可以在O(nlogn)时间内进行预处理，然后在O(1)时间内答每个查询。**<br>
+<br>
+<kbd>预处理</kbd><br>
+假设a数组为：1， 3， 6， 7， 4， 2， 5<br>
+设mn[i][j]表示从第i位开始连续2^j个数中的最小值。例如mn[2][1]为第2位数开始连续2个的数的最小值，即3, 6之间的最小值，即mn[2][1] = 3;
+之后我们很容想到递推方程：
+```cpp 
+for(int j = 1; j <= mm[n]; j++)
+        for(int i = 1; i + (1<<j) -1 <= n; i++)
+            dp[i][j] = max(dp[i][j-1],dp[i+(1<<(j-1))][j-1]);
+```
+注意要将J写在外围for才可以更新
+<br>
+<kbd>查询</kbd><br>
+```cpp
+int rmq(int x,int y)
+{
+    int k = mm[y-x+1];
+    return max(dp[x][k],dp[y-(1<<k)+1][k]);
+}
+```
+### 二维RMQ问题模板
+
+```cpp
+//二维 RMQ，预处理复杂度 n*m*log*(n)*log(m)
+//数组下标从 1 开始
+
+int val[310][310];
+int dp[310][310][9][9];//最大值
+int mm[310];//二进制位数减一，使用前初始化
+
+void initRMQ(int n,int m)
+{
+    for(int i = 1; i <= n; i++)
+        for(int j = 1; j <= m; j++)
+            dp[i][j][0][0] = val[i][j];
+    for(int ii = 0; ii <= mm[n]; ii++)
+        for(int jj = 0; jj <= mm[m]; jj++)
+            if(ii+jj)
+                for(int i = 1; i + (1<<ii) - 1 <= n; i++)
+                    for(int j = 1; j + (1<<jj) - 1 <= m; j++)
+                    {
+                        if(ii)
+                            dp[i][j][ii][jj] = max(dp[i][j][ii-1][jj],dp[i+(1<<(ii-1))][j][ii-1][jj]);
+                        else
+                            dp[i][j][ii][jj] = max(dp[i][j][ii][jj-1],dp[i][j+(1<<(jj-1))][ii][jj-1]);
+                    }
+}
+
+//查询矩形内的最大值 (x1<=x2,y1<=y2)
+
+int rmq(int x1,int y1,int x2,int y2)
+{
+    int k1 = mm[x2-x1+1];
+    int k2 = mm[y2-y1+1];
+    x2 = x2 - (1<<k1) + 1;
+    y2 = y2 - (1<<k2) + 1;
+    return max(max(dp[x1][y1][k1][k2],dp[x1][y2][k1][k2]),max(dp[x2][y1][k1][k2],dp[x2][y2][k1][k2]));
+}
+int main()
+{
+    //在外面对 mm 数组进行初始化
+
+    mm[0] = -1;
+    for(int i = 1; i <= 305; i++)
+        mm[i] = ((i&(i-1))==0)?mm[i-1]+1:mm[i-1];
+    int n,m;
+    int Q;
+    int r1,c1,r2,c2;
+    while(scanf("%d%d",&n,&m) == 2)
+    {
+        for(int i = 1; i <= n; i++)
+            for(int j = 1; j <= m; j++)
+                scanf("%d",&val[i][j]);
+        initRMQ(n,m);
+        scanf("%d",&Q);
+        while(Q--)
+        {
+            scanf("%d%d%d%d",&r1,&c1,&r2,&c2);
+            if(r1 > r2)
+                swap(r1,r2);
+            if(c1 > c2)
+                swap(c1,c2);
+            int tmp = rmq(r1,c1,r2,c2);
+            printf("%d ",tmp);
+            if(tmp == val[r1][c1] || tmp == val[r1][c2] || tmp ==val[r2][c1] || tmp == val[r2][c2])
+                printf("yes\n");
+            else
+                printf("no\n");
+        }
+    }
+    return 0;
+}
+```
