这只是一个新出生的表

--- a/_posts/2018-11-20-no.md
+++ b/_posts/2018-11-20-no.md
@@ -8,5 +8,6 @@ header-img: "img/in-post/no.png"
 tags:
     - 不快乐！
 ---
-* [GCD AND LCM HDU4497 组合](https://vjudge.net/problem/HDU-4497){:target="_blank"}
-* 
+###### 2018-11-20
+* [GCD AND LCM HDU4497 组合](https://vjudge.net/problem/HDU-4497){:target="_blank"}<br>
+l = LCM/GCD, LCM%GCD == 0, 质因子分解， 排列组合 
