--- a/_posts/2018-09-01-hello2018.md
+++ b/_posts/2018-09-01-hello2018.md
@@ -4,7 +4,7 @@ title:      "Hello 2018"
 subtitle:   "Hello World, Hello Blog"
 date:       2018-09-01 17:00:00
 author:     "programfiles"
-header-img: "img/avatar-hux-ny.jpg"
+header-img: "img/in-post/hello2018.jpg"
 tags:
-    - World!
+    - 记录
 ---
