--- a/_posts/2019-06-01-ACM-Graph.md
+++ b/_posts/2019-06-01-ACM-Graph.md
@@ -78,4 +78,120 @@ void dfs(int u, int fa)
             low[u] = min(low[u], low[v]);
     }
 }
+
+POJ3694也不错，有一个用不压缩路径的并查集来查找LCA的操作
 ```
+
+<span id="jump2"></span> 
+# 有向图的强连通分量
+
+**定理：在有向图G中，如果两点可以互相到达，则称这两个点强连通； 如果有向图G的每两个点都强连通，那么我们将G称为一个强连通图； 有向图的极大强连通子图，称为强连通分量**<br><br>
+
+tarjan，这是一种深度优先搜索寻找子树的方法，利用了dfs顺序产生的时间戳：每一个强连通子图都是一颗dfs产生的树，结点属于同一颗树也就是这些结点及其子结点能够访问到的最早的祖先相同<br>
+在dfs的时候我们记录两个值， dfn[u] 和 low[u] ，分别表示当前结点是访问的第几个结点&当前结点及其子结点能访问到的最早的结点，如果 low[u] == pre[u] 就表明这个结点是这个树的根节点，辅助记录的操作用一个栈进行即可。网上讲解太多，这里不写了。。<br><br>
+除了找强连通分量之外，我们一般还用强连通分量的算法进行缩点，就是将每一个强连通子图缩成一个点，建立一个新的图（树）<br>
+
+[HDU4612](http://acm.hdu.edu.cn/showproblem.php?pid=4612)这里还有一个求树的直径的方法**先从任意一点P出发，找离它最远的点Q，再从点Q出发，找离它最远的点W，W到Q的距离就是是的直径**
+
+```cpp
+普通的强连通分量
+
+void dfs(int u)
+{
+    low[u] = dfn[u] = ++dfs_block;
+    S.push(u);
+    for(int i = 0; i < G[u].size(); i++)
+    {
+        int v = G[u][i];
+        if(!dfn[v])
+        {
+            dfs(v);
+            low[u] = min(low[u], low[v]);
+        }
+        else if(!sccno[v])
+            low[u] = min(low[u], low[v]);
+    }
+    if(low[u] == dfn[u])
+    {
+        ++scc_cnt;
+        while(1)
+        {
+            int x = S.top(); S.pop();
+            sccno[x] = scc_cnt;
+            if(x == u) break;
+        }
+    }
+}
+```
+```cpp
+强连通分量缩点 HDU4612 代码的1和2是去重边的操作，每一步防止倒回fa的边即可
+
+void dfs(int u, int fa)
+{
+    low[u] = dfn[u] = ++dfs_block;
+    S.push(u);
+1   bool flag = false;
+    for(int i = 0; i < G[u].size(); i++)
+    {
+        int v = G[u][i];
+        if(!dfn[v])
+        {
+            dfs(v, u);
+            low[u] = min(low[u], low[v]);
+            if(low[v] > dfn[u])
+                bridge++;
+        }
+        else if(v != fa || flag)
+            low[u] = min(low[u], low[v]);
+2       if(v == fa) flag = true;
+    }
+    if(low[u] == dfn[u])
+    {
+        ++scc_cnt;
+        while(1)
+        {
+            int x = S.top(); S.pop();
+            sccno[x] = scc_cnt;
+            if(x == u) break;
+        }
+    }
+}
+void find_scc()
+{
+    init();
+    for(int i = 1; i <= n; i++)
+        if(!dfn[i]) dfs(i, -1);
+}
+void bfs(int s)
+{
+    queue<int> q;
+    q.push(s);
+    memset(vis, 0, sizeof(vis));
+    vis[s] = 1; dis[s] = 0; last_node = s; ret = 0;
+    while(!q.empty())
+    {
+        int u = q.front();
+        q.pop();
+        for(int i = 0; i < M[u].size(); i++)
+        {
+            int v = M[u][i];
+            if(!vis[v])
+            {
+                vis[v] = 1;
+                dis[v] = dis[u] + 1;
+                if(dis[v] > ret)
+                {
+                    ret = dis[v];
+                    last_node = v;
+                }
+                q.push(v);
+            }
+        }
+    }
+}
+    bfs(1);
+    bfs(last_node);
+```
+
+
+
