--- a/_posts/2019-06-01-ACM-Graph.md
+++ b/_posts/2019-06-01-ACM-Graph.md
@@ -13,6 +13,8 @@ tags:
 * [有向图的强连通分量](#jump2)<br>
 * [点双连通分量与边双联通分量](#jump3)<br>
 * [连通图中的重边问题](#jump4)<br>
+* [链式前向星的用法及原理](#jump5)<br>
+* [二分图匹配之匈牙利算法](#jump6)<br>
 
 <span id="jump1"></span> 
 # 无向图的割边与割点
@@ -143,4 +145,73 @@ void dfs(int u)
 证明（不是我证的）：首先把两个最近公共祖先最远的两个叶节点之间连接一条边，这样可以把这两个点到祖先的路径上所有点收缩到一起，因为一个形成的环一定是双连通的。然后再找两个最近公共祖先最远的两个叶节点，这样一对一对找完，恰好是(leaf+1)/2次，把所有点收缩到了一起。<br>
 [POJ3177](https://github.com/edgeOB/source-code/blob/master/POJ3177.cc)
 
+<span id="jump5"></span> 
+# 链式前向星的用法及原理
+链式前向星的学习来自[ACDREAMER](https://blog.csdn.net/acdreamers/article/details/16902023)<br>
+链式前向星和前向星是一种特别的存图的方法，虽然我是跳过前向星直接学习的链式前向星的，毕竟这本身就是同类型的而且链式前向星是优化后的算法，首先这里需要比较一下与其他存图的方法的区别，①->首先在点较大而边较少的情况下，用邻接矩阵是非常浪费资源的，而且完整的二维数组本来能开下来的情况也不能算多，不过邻接矩阵也有一些优点，比如判边是否exist很快；②->STL的vector进行邻接表存图的方法很方便而且节约空间，但是就是慢；<br>
+链式前向星的建立和清空都很容易，尤其是清空的时候，边根本无需清空，只需要将head数组进行清空即可（见后文）<br>
+我们先来看一下前向星是一个什么东西：前向星是一种特殊的边集数组,我们把边集数组中的每一条边按照起点从小到大排序,如果起点相同就按照终点从小到大排序,并记录下以某个点为起点的所有边在数组中的起始位置和存储长度,那么前向星就构造好了。![avatar](/img/blog-small/ACM-Graph2.png)<br>
+假设输入顺序<br>1 2<br>2 3<br>3 4<br>1 3<br>4 1<br>1 5<br>4 5<br>那么排完序后就得到<br>
+编号 :     1      2      3      4      5      6      7<br>
+起点u:    1      1      1      2      3      4      4<br>
+终点v:    2      3      5      3      4      1      5<br>
+得到:<br>
+head[1] = 1    len[1] = 3<br>
+head[2] = 4    len[2] = 1<br>
+head[3] = 5    len[3] = 1<br>
+head[4] = 6    len[4] = 2<br>
+但是利用前向星会有排序操作,如果用快排时间至少为O(nlog(n))<br>
+所以我们使用链式前向星就可以避免排序操作👇<br>
+我们可以建立这样一个结构体和数组
+```cpp
+struct Edge
+{
+    int to,nex,w;
+}edge[maxm];
+int head[maxn],tot;
+```
+这里的edge[i].to表示第i条边指向的点，edge[i].nex表示与第i条边同起点的上一条边的存储位置（是的，在建图结束后我们相当于按照倒着输入的顺序重新遍历回去，但是这样并不影响），edge[i].w表示这条边的权值，另外一个重要的head数组，这个数组head[u]最终存储以u为起点的最后一条边的位置，并且初始化为-1
+```cpp
+void init()
+{
+    tot = 0;
+    memset(head, -1, sizeof(head));
+}
+void addedge(int u, int v, int w)
+{
+    edge[tot].to = v;
+    edge[tot].w = w;
+    edge[tot].nex = head[u];
+    head[u] = tot++;
+}
+```
+下面我们重新模拟上面的加边过程：<br>
+初始化tot = 0,这样,现在我们还是按照上面的图和输入来模拟一下:<br>
+edge[0].to = 2;     edge[0].next = -1;      head[1] = 0;<br>
+edge[1].to = 3;     edge[1].next = -1;      head[2] = 1;<br>
+edge[2].to = 4;     edge[2],next = -1;      head[3] = 2;<br>
+edge[3].to = 3;     edge[3].next = 0;       head[1] = 3;<br>
+edge[4].to = 1;     edge[4].next = -1;      head[4] = 4;<br>
+edge[5].to = 5;     edge[5].next = 3;       head[1] = 5;<br>
+edge[6].to = 5;     edge[6].next = 4;       head[4] = 6;<br>
+我们可以明显的看出来head[i]保存的是以i为起点的所有边中最大的那个边的‘编号’，把这个当成起始位置，然后倒着回去遍历即可<br>
+比如以上图为例,以节点1为起点的边有3条,它们的编号分别是0,3,5,而head[1] = 5
+我们在遍历以u节点为起始位置的所有边的时候是这样的:
+```cpp
+int main()
+{
+    for(int u = 1; u <= n; u++)
+        for(int i = head[u]; i != -1; i = head[i].nex)
+        {
+            v = edge[i].to;
+            ...
+        }
+}
+```
+那么就是说先遍历编号为5的边,也就是head[1],然后就是edge[5].next,也就是编号3的边,然后继续edge[3].next,也
+就是编号0的边,可以看出是逆序的
 
+
+
+<span id="jump6"></span> 
+# 二分图匹配之匈牙利算法
